# chrome-python-aws-lambda

./: .gitignore  Dockerfile  Dockerfile2  README.md  bootstrap.sh  pyproject.toml
app/: app.py
