[project]
authors = [
    {name = "Gabriel Munumel"}
]
description = "This project is to create a Docker image for run Chrome in a AWS Lambda function."
name = "chrome-python-aws-lambda"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

[project.urls]
Homepage = "https://github.com/gmunumel/track-list-extractor"



